--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
         import { getAuth, signInWithCustomToken, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
         import { getFirestore, collection, query, where, orderBy, limit, addDoc, updateDoc, doc, getDocs, onSnapshot, Timestamp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
-        import { firebaseConfig, __app_id, __initial_auth_token, showStatus } from './shared.js'; // shared.jsからインポート
+        import { firebaseConfig, showStatus } from './shared.js'; // __app_id, __initial_auth_token のインポートを削除
 
         // Firebaseの初期化
         const app = initializeApp(firebaseConfig);
@@ -102,6 +102,7 @@
                     showStatus("認証していません。匿名でサインインします。", false, 'status');
                     try {
                         // Canvas環境で提供されるカスタムトークンがあれば使用
+                        // __initial_auth_token はグローバル変数としてアクセス
                         if (typeof __initial_auth_token !== 'undefined' && __initial_auth_token) {
                             await signInWithCustomToken(auth, __initial_auth_token);
                             console.log("Signed in with custom token.");
