デグレ対応

--- a/public/projects.html
+++ b/public/projects.html
@@ -65,22 +65,4 @@
                     <h4 class="text-md font-medium text-gray-800 mb-2">契約管理</h4>
                     <div class="space-y-2">
                         <label class="block text-sm font-medium text-gray-700">契約種類</label>
-                        <div class="flex items-center space-x-4">
-                            <label class="flex items-center">
-                                <input type="radio" id="contract-type-hourly" name="contractType" value="hourly" class="h-4 w-4 text-main focus:ring-main border-gray-300">
-                                <span class="ml-2 text-sm text-gray-700">時給精算</span>
-                            </label>
-                            <label class="flex items-center">
-                                <input type="radio" id="contract-type-fixed" name="contractType" value="fixed" class="h-4 w-4 text-main focus:ring-main border-gray-300">
-                                <span class="ml-2 text-sm text-gray-700">固定精算</span>
-                            </label>
-                        </div>
-                    </div>
-                    <div id="hourly-fields-wrapper" class="space-y-4 mt-4 hidden">
-                        <div>
-                            <label for="basic-hourly-rate-input" class="block text-sm font-medium text-gray-700">基本時給 (円)</label>
-                            <input type="number" id="basic-hourly-rate-input" class="mt-1 block w-full px-3 py-2 bg-white border border-gray-300 rounded-md shadow-sm">
-                        </div>
-                        <div>
-                            <label class="block text-sm font-medium text-gray-700">精算幅 (時間)</label>
-                            <div class="flex items
+                        <div class="flex items-center space-x-
