--- a/public/index.html
+++ b/public/index.html
@@ -9,21 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="bg-gray-100 min-h-screen p-4">
-
-    <div id="loading" class="flex justify-center items-center h-screen">
-        <div class="loader"></div><p class="ml-4 text-lg">読み込んでいます...</p>
-    </div>
-
+    <div id="loading" class="flex justify-center items-center h-screen"><div class="loader"></div><p class="ml-4 text-lg">読み込んでいます...</p></div>
     <div id="app-container" class="w-full" style="display: none;">
         <div id="header-placeholder"></div>
-
         <main class="w-full max-w-md mx-auto">
             <div class="p-6 sm:p-8 space-y-6 bg-white rounded-2xl shadow-lg">
                 <header>
                     <h2 class="text-2xl sm:text-3xl font-bold text-center text-gray-800">打刻システム</h2>
                     <p id="realtime-clock" class="text-xl sm:text-2xl text-center text-gray-500 mt-2 font-mono"></p>
                 </header>
-
                 <div class="space-y-4">
                     <div>
                         <label for="projectCode" class="block text-sm font-medium text-gray-700">プロジェクト</label>
@@ -31,15 +25,12 @@
                             <option value="">プロジェクトを選択してください</option>
                         </select>
                     </div>
-
                     <div id="punch-status" class="pt-2 text-sm text-red-600"></div>
-
                     <div class="flex flex-col space-y-4">
                         <button id="punchInBtn" class="btn bg-main hover:bg-main-dark text-white font-bold py-3 px-4 rounded-lg shadow-md text-lg">出勤</button>
                         <button id="punchOutBtn" class="btn bg-gray-600 hover:bg-gray-700 text-white font-bold py-3 px-4 rounded-lg shadow-md text-lg">退勤</button>
                     </div>
                 </div>
-
                 <div id="active-punch-info" class="mt-6 p-4 bg-main-light rounded-lg text-center hidden">
                     <p class="text-gray-700">現在、<strong id="active-project-name" class="font-bold"></strong> で打刻中です。</p>
                     <p class="text-sm text-gray-500 mt-1">打刻開始時刻: <span id="active-punch-in-time" class="font-mono"></span></p>
@@ -47,19 +38,11 @@
             </div>
         </main>
     </div>
-
     <script type="module">
         import { app, auth, db, initializePage, showStatus } from './shared.js';
-        // ★★★ 修正点: インポート方法を元の安定した形式に戻しました ★★★
-        import { 
-            collection, query, where, orderBy, onSnapshot, addDoc, 
-            updateDoc, doc, serverTimestamp, limit, getDocs 
-        } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+        import { collection, query, where, orderBy, onSnapshot, addDoc, updateDoc, doc, serverTimestamp, limit, getDocs } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
-        let currentUser;
-        let lastPunchType = null;
-        let lastPunchId = null;
-        let activeClockInTime = null;
+        let currentUser, lastPunchType = null, lastPunchId = null, activeClockInTime = null;
 
         function setupIndexPage(user) {
             currentUser = user;
@@ -71,32 +54,19 @@
             document.getElementById('loading').style.display = 'none';
             document.getElementById('app-container').style.display = 'block';
         }
-
         function setupEventListeners() {
             document.getElementById('punchInBtn').addEventListener('click', punchIn);
             document.getElementById('punchOutBtn').addEventListener('click', punchOut);
         }
-
         function updateClock() {
-            const now = new Date();
-            document.getElementById('realtime-clock').textContent = now.toLocaleTimeString('ja-JP');
+            document.getElementById('realtime-clock').textContent = new Date().toLocaleTimeString('ja-JP');
         }
-
         function listenForProjects() {
-            const projectsCollectionRef = collection(db, "projects");
-            const q = query(projectsCollectionRef, where("ownerId", "==", currentUser.uid), orderBy("code"));
-            onSnapshot(q, (querySnapshot) => {
-                const projects = querySnapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
-                updateProjectDropdown(projects);
-            }, (error) => {
-                showStatus("プロジェクトの読み込みに失敗しました。", true, 'punch-status');
-                console.error("プロジェクト読み込み時のFirestoreエラー:", error);
-            });
+            const q = query(collection(db, "projects"), where("ownerId", "==", currentUser.uid), orderBy("code"));
+            onSnapshot(q, (querySnapshot) => updateProjectDropdown(querySnapshot.docs.map(d => ({ id: d.id, ...d.data() }))), (error) => showStatus("プロジェクトの読み込みに失敗しました。", true, 'punch-status'));
         }
-
         function updateProjectDropdown(projects) {
             const select = document.getElementById('projectCode');
-            const currentValue = select.value;
             select.innerHTML = '<option value="">プロジェクトを選択してください</option>';
             projects.forEach(p => {
                 const option = document.createElement('option');
@@ -105,95 +75,54 @@
                 option.dataset.name = p.name;
                 select.appendChild(option);
             });
-            select.value = currentValue;
-            if (lastPunchType === 'in' && activeClockInTime) {
-                select.disabled = true;
-            } else {
-                select.disabled = false;
-            }
+            select.disabled = (lastPunchType === 'in');
         }
-        
         async function checkLastPunch() {
             try {
-                const timestampsRef = collection(db, "timestamps");
-                const q = query(timestampsRef, where("userId", "==", currentUser.uid), orderBy("startTime", "desc"), limit(1));
+                const q = query(collection(db, "timestamps"), where("userId", "==", currentUser.uid), orderBy("clockInTime", "desc"), limit(1));
                 const querySnapshot = await getDocs(q);
                 if (!querySnapshot.empty) {
-                    const lastDoc = querySnapshot.docs[0];
-                    const data = lastDoc.data();
-                    if (!data.endTime) {
+                    const lastDoc = querySnapshot.docs[0], data = lastDoc.data();
+                    if (!data.endTime && data.clockInTime) {
                         lastPunchType = 'in';
                         lastPunchId = lastDoc.id;
-                        activeClockInTime = data.startTime.toDate();
+                        activeClockInTime = data.clockInTime.toDate();
                         updateUIForPunchIn(data.projectCode, data.projectName);
                     } else {
-                        lastPunchType = 'out';
                         updateUIForPunchOut();
                     }
                 } else {
-                    lastPunchType = 'out';
                     updateUIForPunchOut();
                 }
             } catch (error) {
                 console.error("最終打刻の確認中にエラー:", error);
-                // インデックス不足などで失敗した場合、UIが固まらないようにデフォルト状態にする
                 updateUIForPunchOut();
             }
         }
-
         async function punchIn() {
             const projectCode = document.getElementById('projectCode').value;
-            if (!projectCode) {
-                showStatus("プロジェクトを選択してください。", true, 'punch-status');
-                return;
-            }
+            if (!projectCode) return showStatus("プロジェクトを選択してください。", true, 'punch-status');
             const selectedOption = document.getElementById('projectCode').options[document.getElementById('projectCode').selectedIndex];
-            const projectName = selectedOption.dataset.name;
             try {
-                const docRef = await addDoc(collection(db, "timestamps"), {
-                    userId: currentUser.uid,
-                    projectCode: projectCode,
-                    projectName: projectName,
-                    startTime: serverTimestamp(),
-                    endTime: null,
-                    duration: 0
-                });
+                const docRef = await addDoc(collection(db, "timestamps"), { userId: currentUser.uid, projectCode, projectName: selectedOption.dataset.name, clockInTime: serverTimestamp(), endTime: null, duration: 0 });
                 lastPunchId = docRef.id;
-                lastPunchType = 'in';
                 activeClockInTime = new Date();
-                showStatus("", false, 'punch-status');
-                updateUIForPunchIn(projectCode, projectName);
+                updateUIForPunchIn(projectCode, selectedOption.dataset.name);
             } catch (error) {
-                console.error("Error punching in: ", error);
                 showStatus("出勤処理に失敗しました: " + error.message, true, 'punch-status');
             }
         }
-
         async function punchOut() {
-            if (!lastPunchId) {
-                showStatus("出勤記録がありません。", true, 'punch-status');
-                return;
-            }
+            if (!lastPunchId) return showStatus("出勤記録がありません。", true, 'punch-status');
             try {
-                const punchDocRef = doc(db, "timestamps", lastPunchId);
-                const endTime = new Date();
-                const duration = (endTime - activeClockInTime) / (1000 * 60 * 60);
-                await updateDoc(punchDocRef, {
-                    endTime: endTime,
-                    duration: duration
-                });
-                lastPunchId = null;
-                lastPunchType = 'out';
-                activeClockInTime = null;
-                showStatus("お疲れ様でした！", false, 'punch-status');
+                await updateDoc(doc(db, "timestamps", lastPunchId), { endTime: new Date(), duration: (new Date() - activeClockInTime) / 3600000 });
                 updateUIForPunchOut();
             } catch (error) {
-                console.error("Error punching out: ", error);
                 showStatus("退勤処理に失敗しました: " + error.message, true, 'punch-status');
             }
         }
-
         function updateUIForPunchIn(projectCode, projectName) {
+            lastPunchType = 'in';
             document.getElementById('punchInBtn').disabled = true;
             document.getElementById('punchOutBtn').disabled = false;
             document.getElementById('projectCode').value = projectCode;
@@ -202,17 +131,14 @@
             document.getElementById('active-punch-in-time').textContent = activeClockInTime.toLocaleTimeString('ja-JP');
             document.getElementById('active-punch-info').classList.remove('hidden');
         }
-
         function updateUIForPunchOut() {
+            lastPunchType = 'out'; lastPunchId = null; activeClockInTime = null;
             document.getElementById('punchInBtn').disabled = false;
             document.getElementById('punchOutBtn').disabled = true;
             document.getElementById('projectCode').disabled = false;
-            if (document.getElementById('projectCode').options.length > 1) {
-                document.getElementById('projectCode').value = "";
-            }
+            document.getElementById('projectCode').value = "";
             document.getElementById('active-punch-info').classList.add('hidden');
         }
-
         initializePage(setupIndexPage);
     </script>
 </body>
