--- a/public/_header.html
+++ b/public/_header.html
@@ -1,31 +1,51 @@
-<header class="w-full max-w-4xl mx-auto mb-4 flex items-center">
-    <!-- Left Group: Menu -->
-    <div class="w-1/3">
-        <div class="relative">
-            <button id="menu-button" class="p-2 rounded-full hover:bg-gray-200 focus:outline-none">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7" /></svg>
-            </button>
-            <div id="dropdown-menu" class="absolute left-0 mt-2 w-56 bg-white rounded-md shadow-xl z-20 hidden">
-                <a href="index.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">打刻</a>
-                <a href="calendar.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">カレンダー連携</a>
-                <a href="summary.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">稼働管理</a>
-                <a href="projects.html" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100">プロジェクト管理</a>
-                <div class="border-t border-gray-100"></div>
-                <button id="logoutBtn" class="block w-full text-left px-4 py-2 text-sm text-red-600 hover:bg-gray-100">ログアウト</button>
+    <header class="bg-white shadow-md rounded-2xl p-4 mb-6 max-w-4xl mx-auto">
+        <div class="flex justify-between items-center">
+            <!-- ロゴとアプリ名 -->
+            <div class="flex items-center space-x-2">
+                <img src="images/sidepocket_symbol.png" alt="side pocket logo" class="h-8 w-8 rounded-full">
+                <div class="text-2xl font-bold text-gray-800">side pocket</div>
+            </div>
+
+            <!-- デスクトップ用ナビゲーションとユーザー情報 -->
+            <div class="hidden sm:flex items-center space-x-6">
+                <nav class="flex gap-3">
+                    <a href="index.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">打刻</a>
+                    <a href="projects.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">プロジェクト</a>
+                    <a href="summary.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">サマリー</a>
+                    <a href="calendar.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">カレンダー</a>
+                </nav>
+                <div class="flex items-center space-x-2 text-sm text-gray-600">
+                    <!-- ユーザーアイコン -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-user"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="10" r="3"/><path d="M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662"/></svg>
+                    <span id="user-info"></span>
+                    <button id="logout-button" class="btn bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold py-1 px-3 rounded-md text-sm">ログアウト</button>
+                </div>
+            </div>
+
+            <!-- モバイル用ハンバーガーメニュー -->
+            <div class="sm:hidden flex items-center">
+                <button id="menu-toggle" class="p-2 rounded-md hover:bg-gray-100 text-gray-700 focus:outline-none focus:ring-2 focus:ring-main">
+                    <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                    </svg>
+                </button>
             </div>
         </div>
-    </div>
-    <!-- Center Group: Logo -->
-    <div class="w-1/3 flex justify-center">
-        <a href="index.html">
-            <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-24">
-        </a>
-    </div>
-    <!-- Right Group: User Info -->
-    <div class="w-1/3 flex justify-end">
-        <a href="profile.html" class="flex items-center gap-2 text-sm text-gray-600 hover:text-main no-underline">
-            <img id="user-icon" src="https://placehold.co/32x32/EFEFEF/333333?text=?" class="w-8 h-8 rounded-full object-cover bg-gray-200">
-            <span id="user-display-name"></span>
-        </a>
-    </div>
-</header>
+
+        <!-- モバイル用ナビゲーション (デフォルトでは非表示) -->
+        <div id="mobile-menu" class="hidden sm:hidden mt-4 pt-4 border-t border-gray-200">
+            <nav class="flex flex-col space-y-2">
+                <a href="index.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">打刻</a>
+                <a href="projects.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">プロジェクト</a>
+                <a href="summary.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">サマリー</a>
+                <a href="calendar.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">カレンダー</a>
+            </nav>
+            <div class="flex items-center space-x-2 text-sm text-gray-600 mt-4 pt-4 border-t border-gray-200">
+                <!-- ユーザーアイコン -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-user"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="10" r="3"/><path d="M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662"/></svg>
+                <span id="user-info-mobile"></span> <!-- モバイル用ユーザー情報のIDを分ける -->
+                <button id="logout-button-mobile" class="btn bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold py-1 px-3 rounded-md text-sm">ログアウト</button>
+            </div>
+        </div>
+    </header>
+    
