--- a/public/_header.html
+++ b/public/_header.html
@@ -2,28 +2,11 @@
         <div class="flex justify-between items-center">
             <!-- ロゴとアプリ名 -->
             <div class="flex items-center space-x-2">
-                <img src="images/sidepocket_symbol.png" alt="side pocket logo" class="h-8 w-8 rounded-full">
-                <div class="text-2xl font-bold text-gray-800">side pocket</div>
+                <img src="images/sidepocket_logo.png" alt="side pocket logo" class="h-8 w-8 rounded-full">
             </div>
 
-            <!-- デスクトップ用ナビゲーションとユーザー情報 -->
-            <div class="hidden sm:flex items-center space-x-6">
-                <nav class="flex gap-3">
-                    <a href="index.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">打刻</a>
-                    <a href="projects.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">プロジェクト</a>
-                    <a href="summary.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">サマリー</a>
-                    <a href="calendar.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">カレンダー</a>
-                </nav>
-                <div class="flex items-center space-x-2 text-sm text-gray-600">
-                    <!-- ユーザーアイコン -->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-user"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="10" r="3"/><path d="M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662"/></svg>
-                    <span id="user-info"></span>
-                    <button id="logout-button" class="btn bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold py-1 px-3 rounded-md text-sm">ログアウト</button>
-                </div>
-            </div>
-
-            <!-- モバイル用ハンバーガーメニュー -->
-            <div class="sm:hidden flex items-center">
+            <!-- ハンバーガーメニュー (常に表示) -->
+            <div class="flex items-center">
                 <button id="menu-toggle" class="p-2 rounded-md hover:bg-gray-100 text-gray-700 focus:outline-none focus:ring-2 focus:ring-main">
                     <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
@@ -32,8 +15,8 @@
             </div>
         </div>
 
-        <!-- モバイル用ナビゲーション (デフォルトでは非表示) -->
-        <div id="mobile-menu" class="hidden sm:hidden mt-4 pt-4 border-t border-gray-200">
+        <!-- モバイル/デスクトップ共通ナビゲーション (デフォルトでは非表示) -->
+        <div id="mobile-menu" class="hidden mt-4 pt-4 border-t border-gray-200">
             <nav class="flex flex-col space-y-2">
                 <a href="index.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">打刻</a>
                 <a href="projects.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">プロジェクト</a>
@@ -41,10 +24,12 @@
                 <a href="calendar.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">カレンダー</a>
             </nav>
             <div class="flex items-center space-x-2 text-sm text-gray-600 mt-4 pt-4 border-t border-gray-200">
-                <!-- ユーザーアイコン -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-user"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="10" r="3"/><path d="M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662"/></svg>
-                <span id="user-info-mobile"></span> <!-- モバイル用ユーザー情報のIDを分ける -->
-                <button id="logout-button-mobile" class="btn bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold py-1 px-3 rounded-md text-sm">ログアウト</button>
+                <!-- ユーザーアイコンとユーザー名 -->
+                <a href="profile.html" class="flex items-center space-x-2 text-sm text-gray-600 hover:text-main no-underline">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-user"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="10" r="3"/><path d="M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662"/></svg>
+                    <span id="user-info"></span>
+                </a>
+                <button id="logout-button" class="btn bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold py-1 px-3 rounded-md text-sm">ログアウト</button>
             </div>
         </div>
     </header>
