デグレ対応完了1

--- a/public/_header.html
+++ b/public/_header.html
@@ -2,7 +2,7 @@
         <div class="flex justify-between items-center">
             <!-- ロゴとアプリ名 -->
             <div class="flex items-center space-x-2">
-                <img src="images/sidepocket_logo.png" alt="side pocket logo" class="h-8 w-8 rounded-full">
+                <img src="images/sidepocket_Logo.png" alt="side pocket logo" class="h-8 w-8 rounded-full">
             </div>
 
             <!-- ハンバーガーメニュー (常に表示) -->
