--- a/public/_header.html
+++ b/public/_header.html
@@ -1,36 +1,44 @@
-    <header class="bg-white shadow-md rounded-2xl p-4 mb-6 max-w-4xl mx-auto">
-        <div class="flex justify-between items-center">
-            <!-- ロゴとアプリ名 -->
-            <div class="flex items-center space-x-2">
-                <img src="images/sidepocket_Logo.png" alt="side pocket logo" class="h-8 w-8 rounded-full">
-            </div>
-
-            <!-- ハンバーガーメニュー (常に表示) -->
-            <div class="flex items-center">
-                <button id="menu-toggle" class="p-2 rounded-md hover:bg-gray-100 text-gray-700 focus:outline-none focus:ring-2 focus:ring-main">
-                    <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
-                    </svg>
-                </button>
-            </div>
+<header class="bg-white shadow-md rounded-2xl p-4 mb-6 max-w-4xl mx-auto">
+    <div class="flex justify-between items-center">
+        <!-- 左側: ハンバーガーメニューボタン -->
+        <div class="w-1/3 flex justify-start">
+            <button id="menu-toggle" class="p-2 rounded-md hover:bg-gray-100 text-gray-700 focus:outline-none focus:ring-2 focus:ring-main">
+                <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                </svg>
+            </button>
         </div>
 
-        <!-- モバイル/デスクトップ共通ナビゲーション (デフォルトでは非表示) -->
-        <div id="mobile-menu" class="hidden mt-4 pt-4 border-t border-gray-200">
-            <nav class="flex flex-col space-y-2">
-                <a href="index.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">打刻</a>
-                <a href="projects.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">プロジェクト</a>
-                <a href="summary.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">サマリー</a>
-                <a href="calendar.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-sm font-medium">カレンダー</a>
-            </nav>
-            <div class="flex items-center space-x-2 text-sm text-gray-600 mt-4 pt-4 border-t border-gray-200">
-                <!-- ユーザーアイコンとユーザー名 -->
-                <a href="profile.html" class="flex items-center space-x-2 text-sm text-gray-600 hover:text-main no-underline">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-user"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="10" r="3"/><path d="M7 20.662V19a2 2 0 0 1 2-2h6a2 2 0 0 1 2 2v1.662"/></svg>
-                    <span id="user-info"></span>
-                </a>
-                <button id="logout-button" class="btn bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold py-1 px-3 rounded-md text-sm">ログアウト</button>
-            </div>
+        <!-- 中央: ロゴ -->
+        <div class="w-1/3 flex justify-center">
+            <img src="images/sidepocket_Logo.png" alt="side pocket ロゴ" class="h-26 w-auto">
         </div>
-    </header>
-    
+
+        <!-- 右側: ユーザー情報とログアウトボタン -->
+        <div class="w-1/3 flex justify-end items-center space-x-2 text-sm text-gray-600">
+            <a href="profile.html" class="flex items-center space-x-2 text-gray-600 hover:text-main no-underline">
+                <!-- ユーザーアイコン画像 (placeholder) -->
+                <img id="user-icon" src="https://placehold.co/32x32/EFEFEF/333333?text=?" class="w-8 h-8 rounded-full object-cover bg-gray-200">
+                <span id="user-info"></span>
+            </a>
+            <button id="logout-button" class="btn bg-gray-200 hover:bg-gray-300 text-gray-800 font-bold py-1 px-3 rounded-md text-sm">ログアウト</button>
+        </div>
+    </div>
+
+    <!-- フルスクリーンオーバーレイメニュー (デフォルトでは非表示) -->
+    <div id="mobile-menu" class="hidden fixed inset-0 bg-white shadow-lg z-20 p-4">
+        <div class="flex justify-end">
+            <button id="close-menu-button" class="p-2 rounded-md hover:bg-gray-100 text-gray-700 focus:outline-none focus:ring-2 focus:ring-main">
+                <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                </svg>
+            </button>
+        </div>
+        <nav class="flex flex-col space-y-2 mt-4">
+            <a href="index.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-base font-medium">打刻</a>
+            <a href="projects.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-base font-medium">プロジェクト</a>
+            <a href="summary.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-base font-medium">サマリー</a>
+            <a href="calendar.html" class="btn text-gray-700 hover:text-main-dark hover:bg-gray-100 px-3 py-2 rounded-md text-base font-medium">カレンダー</a>
+        </nav>
+    </div>
+</header>
